force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_lead_commissioner_approval_date__c.field-meta.xml
<CustomField>
    <fullName>cs_lead_commissioner_approval_date__c</fullName>
    <description>For example, 31 3 2018</description>
    <inlineHelpText>When do you expect final approval and sign off from the lead commissioner?</inlineHelpText>
    <label>CS - Lead Commissioner Approval Date</label>
    <type>Date</type>
</CustomField>