force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_lead_investor_approval__c.field-meta.xml
<CustomField>
    <fullName>cs_lead_investor_approval__c</fullName>
    <inlineHelpText>Do you have final approval and sign off from the lead investor(s)?</inlineHelpText>
    <label>CS - Lead Investor Approval</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>