force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_management_completion_date__c.field-meta.xml
<CustomField>
    <fullName>cs_management_completion_date__c</fullName>
    <description>For example, 31 3 2018</description>
    <inlineHelpText>When do you expect to complete the procurement of SIB management, data analysis and evaluation?</inlineHelpText>
    <label>CS - Management Completion Date</label>
    <type>Date</type>
</CustomField>