force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_maximum_investment_need__c.field-meta.xml
<CustomField>
    <fullName>cs_maximum_investment_need__c</fullName>
    <inlineHelpText>What is the maximum social (and other external) investment your project needs to raise in total to start up the SIB?</inlineHelpText>
    <label>CS - Maximum Investment Need</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>