force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_more_than_one_investor__c.field-meta.xml
<CustomField>
    <fullName>cs_more_than_one_investor__c</fullName>
    <inlineHelpText>Does your project have more than one investor?</inlineHelpText>
    <label>CS - More Than One Investor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>