force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_number_of_investors__c.field-meta.xml
<CustomField>
    <fullName>cs_number_of_investors__c</fullName>
    <description>Count of investors for this full award setup form</description>
    <inlineHelpText>Count of investors for this full award setup form</inlineHelpText>
    <label>CS - Number of Investors</label>
    <summaryForeignKey>Form_LCF_Setup_Investor_1__c.full_award_setup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>