force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_other_funding_required__c.field-meta.xml
<CustomField>
    <fullName>cs_other_funding_required__c</fullName>
    <description>Please note that we expect the total non-social investment to be lower than the total social investment for each project funded by LCF</description>
    <inlineHelpText>What other funding will you need to supplement the start-up of your SIB?</inlineHelpText>
    <label>CS - Other Funding Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed rate loans</fullName>
            </value>
            <value>
                <fullName>Third party grant funding</fullName>
            </value>
            <value>
                <fullName>Service fee/other commissioner funding</fullName>
                <label>Fee for service or other blended commissioner funding</label>
            </value>
            <value>
                <fullName>No other funding will be needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>