force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_outcome_signoff__c.field-meta.xml
<CustomField>
    <fullName>cs_outcome_signoff__c</fullName>
    <inlineHelpText>Do you have final approval and signoff of the outcomes and financials in this form?</inlineHelpText>
    <label>CS - Outcome Signoff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>