force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_outcome_signoff_email__c.field-meta.xml
<CustomField>
    <fullName>cs_outcome_signoff_email__c</fullName>
    <inlineHelpText>Email address</inlineHelpText>
    <label>CS - Outcome Signoff Email</label>
    <type>Email</type>
</CustomField>