force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_outcome_signoff_mobile__c.field-meta.xml
<CustomField>
    <fullName>cs_outcome_signoff_mobile__c</fullName>
    <inlineHelpText>Mobile</inlineHelpText>
    <label>CS - Outcome Signoff Mobile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>