force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_outcome_signoff_name__c.field-meta.xml
<CustomField>
    <fullName>cs_outcome_signoff_name__c</fullName>
    <inlineHelpText>Name</inlineHelpText>
    <label>CS - Outcome Signoff Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>