force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_outcome_signoff_organisation__c.field-meta.xml
<CustomField>
    <fullName>cs_outcome_signoff_organisation__c</fullName>
    <inlineHelpText>Organisation</inlineHelpText>
    <label>CS - Outcome Signoff Organisation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>