force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_outcome_signoff_phone__c.field-meta.xml
<CustomField>
    <fullName>cs_outcome_signoff_phone__c</fullName>
    <inlineHelpText>Landline phone</inlineHelpText>
    <label>CS - Outcome Signoff Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>