force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_outcome_signoff_role__c.field-meta.xml
<CustomField>
    <fullName>cs_outcome_signoff_role__c</fullName>
    <inlineHelpText>Role</inlineHelpText>
    <label>CS - Outcome Signoff Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>