force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_procurement_completion_date__c.field-meta.xml
<CustomField>
    <fullName>cs_procurement_completion_date__c</fullName>
    <description>For example, 31 3 2018</description>
    <inlineHelpText>When do you expect to complete procurement of the delivery agents?</inlineHelpText>
    <label>CS - Procurement Completion Date</label>
    <type>Date</type>
</CustomField>