force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_project_admin_fees__c.field-meta.xml
<CustomField>
    <fullName>cs_project_admin_fees__c</fullName>
    <inlineHelpText>What is the maximum your project expects the administration and associated investment fees will cost?</inlineHelpText>
    <label>CS - Project Admin Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>