force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_project_end_date__c.field-meta.xml
<CustomField>
    <fullName>cs_project_end_date__c</fullName>
    <inlineHelpText>What is your current project end date when the SIB will complete its work with LCF Funds?</inlineHelpText>
    <label>CS - Project End Date</label>
    <type>Date</type>
</CustomField>