force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_project_specific_terms__c.field-meta.xml
<CustomField>
    <fullName>cs_project_specific_terms__c</fullName>
    <inlineHelpText>Did your in-principle offer contain any project specific terms, in addition to the standard terms and conditions?</inlineHelpText>
    <label>CS - Project Specific Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>