force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_project_specific_terms_compliance__c.field-meta.xml
<CustomField>
    <fullName>cs_project_specific_terms_compliance__c</fullName>
    <inlineHelpText>Please set out how you have met any additional project specific terms</inlineHelpText>
    <label>CS - Project Specific Terms Compliance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>