force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_risk_management__c.field-meta.xml
<CustomField>
    <fullName>cs_risk_management__c</fullName>
    <description>As well as telling us about risk identification and management, tell us how you are or will be recording these risks.</description>
    <inlineHelpText>What risks have you identified? How will you manage these?</inlineHelpText>
    <label>CS - Risk Management</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>