force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_risk_transference__c.field-meta.xml
<CustomField>
    <fullName>cs_risk_transference__c</fullName>
    <description>Tell us how you will ensure your project supports risk being transferred from commissioners and providers to other stakeholders. What plans do you have in place to manage any residual risk (including reputational risk) and to help ensure that return to stakeholders is proportionate to the risk borne by each them?</description>
    <inlineHelpText>Risk Transference</inlineHelpText>
    <label>CS - Risk Transference</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>