force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_service_delivery_date__c.field-meta.xml
<CustomField>
    <fullName>cs_service_delivery_date__c</fullName>
    <description>We&#39;d expect this to be within three months of the launch date.</description>
    <inlineHelpText>When do you expect service delivery to start?</inlineHelpText>
    <label>CS - Service Delivery Date</label>
    <type>Date</type>
</CustomField>