force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_sib_data_management__c.field-meta.xml
<CustomField>
    <fullName>cs_sib_data_management__c</fullName>
    <description>Tell us about the commitment of you, your commissioners, providers, investors, advisors and other contractors to openly sharing data with LCF and the social investment, local government and VCSE sector?</description>
    <inlineHelpText>Set out your plans for data collection, management, analysis and the arrangements you plan to make for
verification</inlineHelpText>
    <label>CS - SIB Data Management</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>