force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_sib_evaluation_aim__c.field-meta.xml
<CustomField>
    <fullName>cs_sib_evaluation_aim__c</fullName>
    <description>Set out the questions you aim to be able to answer as a result of your evaluation activity</description>
    <inlineHelpText>Outline what you look to learn from the evaluation of your SIB project</inlineHelpText>
    <label>CS - SIB Evaluation Aim</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>