force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_sib_governance__c.field-meta.xml
<CustomField>
    <fullName>cs_sib_governance__c</fullName>
    <inlineHelpText>Describe the proposed design, funds flow(s), governance and structure of your SIB</inlineHelpText>
    <label>CS - SIB Governance</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>