force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_sib_governance_board__c.field-meta.xml
<CustomField>
    <fullName>cs_sib_governance_board__c</fullName>
    <inlineHelpText>Will all key parties be on the management board?</inlineHelpText>
    <label>CS - SIB Governance Board</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>