force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_sib_governance_files__c.field-meta.xml
<CustomField>
    <fullName>cs_sib_governance_files__c</fullName>
    <inlineHelpText>Funds flow proforma/stakeholder linkages diagram: file uploads</inlineHelpText>
    <label>CS - SIB Governance Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>