force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_sib_governance_leadership__c.field-meta.xml
<CustomField>
    <fullName>cs_sib_governance_leadership__c</fullName>
    <inlineHelpText>How will you ensure your SIB has strong leadership, an outcomes focus, shared understanding between stakeholders and good data?</inlineHelpText>
    <label>CS - SIB Governance Leadership</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>