force-app/main/default/objects/Form_LCF_Setup_1__c/fields/CS_SIB_Governance_Providers__c.field-meta.xml
<CustomField>
    <fullName>CS_SIB_Governance_Providers__c</fullName>
    <inlineHelpText>What have you done to check the financial resilience of your intervention provider(s)?</inlineHelpText>
    <label>CS - SIB Governance Providers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>