force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_sib_governance_resilience__c.field-meta.xml
<CustomField>
    <fullName>cs_sib_governance_resilience__c</fullName>
    <description>(including the impact of external factors)</description>
    <inlineHelpText>How will you ensure financial resilience during the project&#39;s life?</inlineHelpText>
    <label>CS - SIB Governance Resilience</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>