force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_sib_governance_stakeholders__c.field-meta.xml
<CustomField>
    <fullName>cs_sib_governance_stakeholders__c</fullName>
    <inlineHelpText>What are your plans to sustain stakeholder engagement plans (including service users) during the project?</inlineHelpText>
    <label>CS - SIB Governance Stakeholders</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>