force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_sib_governance_support__c.field-meta.xml
<CustomField>
    <fullName>cs_sib_governance_support__c</fullName>
    <description>e.g. select a management agent or engage investor or other advice to cover this</description>
    <inlineHelpText>How do you plan to secure specialist support?</inlineHelpText>
    <label>CS - SIB Governance Support</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>