force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_sib_launch_date__c.field-meta.xml
<CustomField>
    <fullName>cs_sib_launch_date__c</fullName>
    <description>For example, 31 3 2018</description>
    <inlineHelpText>What is your current project start date when the SIB will launch?</inlineHelpText>
    <label>CS - SIB Launch Date</label>
    <type>Date</type>
</CustomField>