force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_step_up_period__c.field-meta.xml
<CustomField>
    <fullName>cs_step_up_period__c</fullName>
    <inlineHelpText>Will there be a step up period before you start full delivery?</inlineHelpText>
    <label>CS - Step Up Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>