force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_step_up_period_start__c.field-meta.xml
<CustomField>
    <fullName>cs_step_up_period_start__c</fullName>
    <description>Normally must be within six months of delivery starting.</description>
    <inlineHelpText>Start of step up period before you start full delivery</inlineHelpText>
    <label>CS - Step Up Period Start</label>
    <type>Date</type>
</CustomField>