force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_successful_outcome_description__c.field-meta.xml
<CustomField>
    <fullName>cs_successful_outcome_description__c</fullName>
    <description>If you deliver this SIB as planned and achieve the financial, social and learning set out above, what will the impact be for parties involved and the wider community? What do you plan to do to build on this impact?</description>
    <inlineHelpText>What will the successful outcome of your project look like?</inlineHelpText>
    <label>CS - Successful Outcome Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>