force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_third_party_fund_source__c.field-meta.xml
<CustomField>
    <fullName>cs_third_party_fund_source__c</fullName>
    <inlineHelpText>Who will source the third party grant funding?</inlineHelpText>
    <label>CS - Third Party Fund Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>