force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_third_party_funding_amount__c.field-meta.xml
<CustomField>
    <fullName>cs_third_party_funding_amount__c</fullName>
    <inlineHelpText>Amount needed from third party grant funding</inlineHelpText>
    <label>CS - Third Party Funding Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>