force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_third_party_source_known__c.field-meta.xml
<CustomField>
    <fullName>cs_third_party_source_known__c</fullName>
    <inlineHelpText>Do you know who will source the grant funding?</inlineHelpText>
    <label>CS - Third Party Source Known</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>