force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_total_investment__c.field-meta.xml
<CustomField>
    <fullName>cs_total_investment__c</fullName>
    <description>Total of investors investment amounts</description>
    <inlineHelpText>Total of investors investment amounts</inlineHelpText>
    <label>CS - Total Investment by Investors</label>
    <summarizedField>Form_LCF_Setup_Investor_1__c.in_amount__c</summarizedField>
    <summaryForeignKey>Form_LCF_Setup_Investor_1__c.full_award_setup__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>