force-app/main/default/objects/Form_LCF_Setup_1__c/fields/cs_total_other_funding__c.field-meta.xml
<CustomField>
    <fullName>cs_total_other_funding__c</fullName>
    <description>Total other funding of the SIB</description>
    <formula>cs_fixed_rate_loan_amount__c + cs_third_party_funding_amount__c + cs_funds_from_commissioners_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total other funding of the SIB</inlineHelpText>
    <label>CS - Total Other Funding</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>