force-app/main/default/objects/Form_LCF_Setup_1__c/fields/Form_Complete__c.field-meta.xml
<CustomField>
    <fullName>Form_Complete__c</fullName>
    <formula>AND(
  ISPICKVAL(ap_section_status__c, 'COMPLETE'), 
  ISPICKVAL(pr_section_status__c, 'COMPLETE'), 
  ISPICKVAL(so_section_status__c, 'COMPLETE'), 
  ISPICKVAL(tm_section_status__c, 'COMPLETE'), 
  ISPICKVAL(sd_section_status__c, 'COMPLETE') 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Form Complete?</inlineHelpText>
    <label>Form Complete</label>
    <type>Checkbox</type>
</CustomField>