force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_cohort_definition_changes__c.field-meta.xml
<CustomField>
    <fullName>pr_cohort_definition_changes__c</fullName>
    <description>Reference the actions taken to strengthen cohort definition including why have you chosen the particular group of service users you are planning to work with within this policy area and what gap in service provision are you seeking to address by supporting this group.</description>
    <inlineHelpText>How and why has your cohort definition changed since the in-principle offer?</inlineHelpText>
    <label>PR - Cohort Definition Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>