force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_commissioner_disengagement__c.field-meta.xml
<CustomField>
    <fullName>pr_commissioner_disengagement__c</fullName>
    <inlineHelpText>Have any commissioners disengaged from the project since the in-principle offer?</inlineHelpText>
    <label>PR - Commissioner Disengagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>