force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_expected_service_users__c.field-meta.xml
<CustomField>
    <fullName>pr_expected_service_users__c</fullName>
    <inlineHelpText>Users expected to use your service</inlineHelpText>
    <label>PR - Expected Service Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>