force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_lcf_offer_requirements__c.field-meta.xml
<CustomField>
    <fullName>pr_lcf_offer_requirements__c</fullName>
    <inlineHelpText>Please outline how you have addressed LCF offer requirements and feedback</inlineHelpText>
    <label>PR - LCF Offer Requirements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>