force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_new_stakeholders__c.field-meta.xml
<CustomField>
    <fullName>pr_new_stakeholders__c</fullName>
    <inlineHelpText>Are there any new stakeholders?</inlineHelpText>
    <label>PR - New Stakeholders</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>