force-app/main/default/objects/Form_LCF_Setup_1__c/fields/PR_Number_of_Disengagements__c.field-meta.xml
<CustomField>
    <fullName>PR_Number_of_Disengagements__c</fullName>
    <description>Count of commissioner disengagements for this full award setup form</description>
    <inlineHelpText>Count of commissioner disengagements for this full award setup form</inlineHelpText>
    <label>PR - Number of Disengagements</label>
    <summaryForeignKey>Form_LCF_Disengagement_1__c.full_award_setup__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>