force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_number_of_stakeholders__c.field-meta.xml
<CustomField>
    <fullName>pr_number_of_stakeholders__c</fullName>
    <description>Count of stakeholders for this application</description>
    <formula>application__r.Setup_Number_of_Stakeholders__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of stakeholders for this application</inlineHelpText>
    <label>PR - Number of Stakeholders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>