force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_outcome_payment_service_users__c.field-meta.xml
<CustomField>
    <fullName>pr_outcome_payment_service_users__c</fullName>
    <inlineHelpText>Users you expect to achieve at least one outcome that triggers a payment</inlineHelpText>
    <label>PR - Outcome Payment Service Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>