force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_potential_service_users__c.field-meta.xml
<CustomField>
    <fullName>pr_potential_service_users__c</fullName>
    <inlineHelpText>Potential service users</inlineHelpText>
    <label>PR - Potential Service Users</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>