force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_primary_stakeholder__c.field-meta.xml
<CustomField>
    <fullName>pr_primary_stakeholder__c</fullName>
    <description>Primary stakeholder for this application</description>
    <formula>application__r.Setup_Primary_Stakeholder__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Primary stakeholder for this application</inlineHelpText>
    <label>PR - Primary Stakeholder</label>
    <type>Text</type>
</CustomField>