force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_primary_stakeholder_count__c.field-meta.xml
<CustomField>
    <fullName>pr_primary_stakeholder_count__c</fullName>
    <description>Count of primary stakeholders (should be 1)</description>
    <formula>application__r.Setup_Primary_Stakeholder_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of primary stakeholders (should be 1)</inlineHelpText>
    <label>PR - Primary Stakeholder Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>