force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_referral_pathway_changes__c.field-meta.xml
<CustomField>
    <fullName>pr_referral_pathway_changes__c</fullName>
    <description>Reference new referral pathways, changes to the referral process, ensuring the right people are referred to your project and engagement levels with service users and their immediate local communities.  Reference how people will access your service and barriers to access.</description>
    <inlineHelpText>How and why have your referral pathways changed since the in-principle offer?</inlineHelpText>
    <label>PR - Referral Pathway Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>