force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_referral_pathways_changed__c.field-meta.xml
<CustomField>
    <fullName>pr_referral_pathways_changed__c</fullName>
    <inlineHelpText>Have your referral pathways changed since the in-principle offer?</inlineHelpText>
    <label>PR - Referral Pathways Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>