force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_service_users_changed__c.field-meta.xml
<CustomField>
    <fullName>pr_service_users_changed__c</fullName>
    <inlineHelpText>Have your service user numbers changed since the in-principle offer?</inlineHelpText>
    <label>PR - Service Users Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>