force-app/main/default/objects/Form_LCF_Setup_1__c/fields/pr_stakeholder_confirmation_files__c.field-meta.xml
<CustomField>
    <fullName>pr_stakeholder_confirmation_files__c</fullName>
    <inlineHelpText>Confirmation of Commissioner Engagement: File Uploads</inlineHelpText>
    <label>PR - Stakeholder Confirmation Files</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>