force-app/main/default/objects/Form_LCF_Setup_1__c/fields/Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Value__c</fullName>
    <description>Project Value = Outcome Payments Expected</description>
    <formula>sf_outcome_payments_expected__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Project Value = Outcome Payments Expected</inlineHelpText>
    <label>Project Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>