force-app/main/default/objects/Form_LCF_Setup_1__c/fields/sd_declaration__c.field-meta.xml
<CustomField>
    <fullName>sd_declaration__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>I agree</inlineHelpText>
    <label>SD - Declaration</label>
    <type>Checkbox</type>
</CustomField>