force-app/main/default/objects/Form_LCF_Setup_1__c/fields/sd_responsible_person__c.field-meta.xml
<CustomField>
    <fullName>sd_responsible_person__c</fullName>
    <inlineHelpText>Name of the legally responsible person</inlineHelpText>
    <label>SD - Responsible Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>