force-app/main/default/objects/Form_LCF_Setup_1__c/fields/sf_cashable_benefits_expected__c.field-meta.xml
<CustomField>
    <fullName>sf_cashable_benefits_expected__c</fullName>
    <inlineHelpText>What are the expected cashable benefits through costs avoided?</inlineHelpText>
    <label>SF - Cashable Benefits Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>