force-app/main/default/objects/Form_LCF_Setup_1__c/fields/sf_cashable_savings_expected__c.field-meta.xml
<CustomField>
    <fullName>sf_cashable_savings_expected__c</fullName>
    <description>Page Title:For local commissioners engaged in the project as outcomes payers:</description>
    <inlineHelpText>What are the expected cashable savings?</inlineHelpText>
    <label>SF - Cashable Savings Expected</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>