force-app/main/default/objects/Form_LCF_Setup_1__c/fields/sf_cashable_savings_other_parties__c.field-meta.xml
<CustomField>
    <fullName>sf_cashable_savings_other_parties__c</fullName>
    <inlineHelpText>What are the expected cashable savings?</inlineHelpText>
    <label>SF - Cashable Savings Other Parties</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>