force-app/main/default/objects/Form_LCF_Setup_1__c/fields/sf_central_government_services__c.field-meta.xml
<CustomField>
    <fullName>sf_central_government_services__c</fullName>
    <description>Please identify which services below, and which central government departments are involved</description>
    <inlineHelpText>Proposed interventions that central government is responsible for delivering</inlineHelpText>
    <label>SF - Central Government Services</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>