force-app/main/default/objects/Form_LCF_Setup_1__c/fields/sf_financials_changed__c.field-meta.xml
<CustomField>
    <fullName>sf_financials_changed__c</fullName>
    <inlineHelpText>Have key financials changed?</inlineHelpText>
    <label>SF - Financials Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>