force-app/main/default/objects/Form_LCF_Setup_1__c/fields/sf_lcf_contribution_request_changed__c.field-meta.xml
<CustomField>
    <fullName>sf_lcf_contribution_request_changed__c</fullName>
    <inlineHelpText>Has your request for LCF contribution has changed?</inlineHelpText>
    <label>SF - LCF Contribution Request Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>